<resources>
    <string name="app_name">Inndex</string>
    <string name="tab1">Ingresado</string>
    <string name="tab2">Rendimiento</string>
    <string name="title_activity_combustible">Medir Combustible</string>
    <string name="precio">Precio Galón:</string>
    <string name="combustible">Combustible Ingresado</string>
    <string name="iniciar">Iniciar Medición</string>
    <string name="detener">Detener Medición</string>
    <string name="iniciar2">Iniciar Recorrido</string>
    <string name="detener2">Detener Recorrido</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="config">Configuración</string>
    <string name="medir">Medir Combustible</string>
    <string name="tanquear">¿Donde tanquear?</string>
    <string name="title_activity_tanquear">TanquearActivity</string>
    <string name="title_activity_historial">HistorialActivity</string>
    <string name="back">back</string>
    <string name="cero_galon">0.0 Gl</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="recordar">Recordar Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar">Confirmar</string>
    <string name="codigo">Codigo</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_validacion">ValidacionActivity</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="dispostivo">Dispositivos</string>
    <string name="title_activity_dispositivo">DispositivoActivity</string>
    <string name="capacidad">Capacidad de combustible</string>
    <string name="guardar">Guardar cambios</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="config2">Configuración de cuenta</string>
    <string name="agregar_inf">Agregar Información</string>
    <string name="cambiar_password">Cambiar Contraseña</string>
    <string name="mi_vehiculo">Mi vehiculo</string>
    <string name="title_activity_password">Password</string>
    <string name="password_actual">Contraseña actual</string>
    <string name="password_nueva">Contraseña nueva</string>
    <string name="password_nueva_confir">Confirmar contraseña nueva</string>
    <string name="txt_galones">%1$.2f Gl /</string>
    <string name="txt_distancia">%1$.2f Km</string>
    <string name="content_image_btn_refresh">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="cant_deseada">Cantidad deseada</string>
    <string name="gal">Gl /</string>
    <string name="historial">Historial</string>
    <string-array name="optCantDeseada">
        <item>COP</item>
        <item>Gal</item>
    </string-array>
    <string name="title_activity_estaciones">Estaciones</string>
    <string name="cal_aceptar">Aceptar</string>
    <string name="cal_cancelar">Cancelar</string>
    <string name="cant_gal">%1$.1f Gl</string>
    <string name="title_activity_detalle_recorrido">Map</string>
    <string name="btn_menu_content_desc">menu</string>
    <string name="titulo_reportar_accidente">Reportar accidente</string>
    <string name="ingresar_comentario">Ingresar comentario</string>
    <string name="reportar">Reportar</string>
    <string name="comentarios">Comentarios</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="otra_estacion">Otra</string>
    <string name="txt_agregar_vc"> Agregar vehículo</string>
    <string name="hint_marca">MARCA</string>
    <string name="hint_modelo">MODELO</string>
    <string name="hint_linea">LINEA</string>
    <string name="hint_combustible">COMBUSTIBLE</string>
    <string name="adquisici_n">Adquisición</string>
    <string name="contrase_a">Contraseña</string>
    <string name="pa_s_ciudad">País, Ciudad</string>
    <string name="correo">Correo electrónico</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="hint_placa">PLACA</string>
    <string name="hint_password">********</string>
    <string name="tiene_2_tanques">Tiene 2 tanques?</string>
    <string name="recorrido">Iniciar Recorrido</string>
    <string name="parar_recorrido">Parar recorrido</string>
    <string name="actualizar_bluetooth">Actualizar bluetooth</string>
    <string name="registrar_informaci_n">Registrar Información</string>
    <string name="nivel_adquisition">Nivel: %1$d</string>
    <string name="flujo_adquisition">Volumen: %1$d</string>
    <string name="upload_recorridos">Subir Recorridos</string>
    <string name="states">Estados</string>
    <string name="cambiar_estado">Cambiar estado</string>
    <string name="datos_recorrido">Ver recorridos</string>
    <string name="volumen">Volumen</string>
    <string name="agregar">Agregar</string>
    <string-array name="tipos_combustibles">
        <item>Corriente</item>
        <item>Extra</item>
        <item>Diesel</item>
        <item>Biodiesel</item>
        <item>GNV</item>
    </string-array>
    <string-array name="tipos_combustibles_venta">
        <item>Corriente</item>
        <item>Extra</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="opciones_filtro_distancia">
        <item>Todas</item>
        <item>&lt; 500m</item>
        <item>&lt; 1 km</item>
        <item>&lt; 2 km</item>
        <item>&lt; 5 km</item>
        <item>&lt; 10 km</item>
        <item>&lt; 20 km</item>
        <item>&lt; 50 km</item>
        <item>&lt; 100 km</item>
    </string-array>
    <string-array name="opciones_filtro_calificacion">
        <item>Todas</item>
        <item>&gt; 1</item>
        <item>&gt; 2</item>
        <item>&gt; 3</item>
        <item>&gt; 4</item>
    </string-array>
    <string-array name="opciones_filtro_cajeros">
        <item>ATH - Red AVAL</item>
        <item>Banco agrario</item>
        <item>Bancolombia</item>
        <item>BBVA</item>
        <item>Colpatria</item>
        <item>Davivienda</item>
    </string-array>
    <string-array name="opciones_puntos_pago">
        <item>Baloto</item>
        <item>Efecty</item>
        <item>PagaTodo</item>
        <item>PuntoRed</item>
    </string-array>
    <string-array name="opciones_tiendas">
        <item>Altoque</item>
        <item>ARA</item>
        <item>D1</item>
        <item>Éxito express</item>
        <item>Justo y Bueno</item>
        <item>Olimpica</item>
        <item>Tiger y Market</item>

    </string-array>
    <string-array name="tipo_oferta">
        <item>Promoción</item>
        <item>Sorteo</item>
        <item>Otra</item>

    </string-array>
    <string-array name="categoria_oferta">
        <item>Soat</item>
        <item>Combustible</item>
        <item>Lubricantes</item>
        <item>Otro</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="filtrar">Filtrar</string>
    <string name="con_que_certificados_de_calidad">¿Con qué certificados de calidad?</string>
    <string name="que_marcas_prefieres">¿Qué marcas prefieres?</string>
    <string name="con_que_tipo_de_combustible">Tipo de combustible</string>
    <string name="que_tan_cerca_de_ti">¿Qué tan cerca de ti?</string>
    <string name="con_que_calificacion">¿Con qué calificación?</string>
    <string name="filtros">Filtros</string>
    <string name="tipo_de_combustible">Tipo de combustible</string>
    <string name="ingresa_la_cantidad_o_valor">Ingresa la cantidad o valor</string>
    <string name="favoritos">Favoritos</string>
    <string name="compartir_app">Compartir App</string>
    <string name="mis_veh_culos">Mis vehículos</string>
    <string name="ayuda">Ayuda</string>
    <string name="informaci_n">Información</string>
    <string name="administrar_mi_eds">Administrar mi EDS</string>
    <string name="precio_combustible_placeholder">$ %1$s</string>
    <string name="pais">Pais</string>
    <string name="cel">Celular</string>
    <string name="celular">Celular</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="tvModFecNacimiento">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="tvMasculino">Masculino</string>
    <string name="tvFemenino">Femenino</string>
    <string name="etPassword">12345678</string>
    <string name="tvContrasena">Contraseña</string>
    <string name="informacion_personal">Información personal</string>
    <string name="privacidad">Privacidad</string>
    <string name="seguridad">Seguridad</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="btn_guardar_cambios">Guardar Cambios</string>
    <string name="hint_contrasena_actual">Contraseña actual</string>
    <string name="hint_contrasena_nueva">Contraseña nueva</string>
    <string name="hint_conf_contrasena_nueva">Confirmar contraseña nueva</string>
    <string name="navegar">Navegar</string>
    <string name="cajeros_electr_nicos">Cajeros electrónicos</string>
    <string name="a_donde_vas">¿A donde vas?</string>
    <string name="tvNombres">Nombres</string>
    <string name="etNombres">Carlos Alonso</string>
    <string name="tvApellidos">Apellidos</string>
    <string name="etApellidos">Lago Baute</string>
    <string name="tv_n_mero_de_identidad">Número de Identidad</string>
    <string name="et_n_mero_de_identidad">Número de identidad</string>
    <string name="placa">HDZ-51C</string>
    <string name="linea">3 ALL NEW</string>
    <string name="anio">2015</string>
    <string name="marca">MAZDA</string>
    <string name="precio_cyh">Precio:</string>
    <string name="gasolina_corriente_cyh">Gasolina corriente</string>
    <string name="signo_peso_cyh">$</string>
    <string name="gasolina_extra">Gasolina extra</string>
    <string name="inicio">Inicio</string>
    <string name="lista">Lista</string>
    <string name="agregar_eds">Agregar EDS</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="mensaje_admin">Si eres dueño, gerente ó administrador de una estación de servicios y solo tú quieres gestionar y editar la información de tu EDS. Comunícate con nosotros al correo:</string>
    <string name="inndex_email">inndexco@gmail.com</string>
    <string name="autorizaci_n_de_tratamiento_de_datos_personales_usuarios_inndex_company_s_a_s">Autorización de Tratamiento de datos personales Usuarios - INNDEX COMPANY S.A.S</string>
    <string name="t_rminos_y_condiciones_de_uso_de_plataforma_inndex">Términos y Condiciones de Uso de Plataforma Inndex</string>
    <string name="pol_tica_de_tratamiento_de_datos_pesonales_pol_tica_de_privacidad">Política de Tratamiento de Datos Pesonales (Política de Privacidad)</string>
    <string name="pol_tica_de_tratamiento_de_datos_personales_pol_tica_de_privacidad">Política de Tratamiento de Datos Personales (Política de Privacidad)</string>
    <string name="autorizacion_de_tratamiento_de_datos_personales_usuarios_inndez_company_s_a_s">Autorizacion de Tratamiento de datos personales Usuarios - Inndez Company S.A.S</string>
    <string name="separator_or">o</string>
    <string name="escr_benos_al_whatsapp">Escríbenos al Whatsapp</string>
</resources>