<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/opt_administrar_eds"
        android:title="@string/administrar_mi_eds" />

    <item
        android:id="@+id/opt_agregar_eds"
        android:title="@string/agregar_eds" />

    <item
        android:id="@+id/opt_mis_vehiculos"
        android:title="@string/mis_veh_culos" />

    <item
        android:id="@+id/opt_compartir_app"
        android:title="@string/compartir_app" />

    <item
        android:id="@+id/opt_ayuda"
        android:title="@string/ayuda" />

    <item
        android:id="@+id/opt_informacion"
        android:title="@string/informaci_n" />

    <item
        android:id="@+id/opt_configuracion"
        android:title="@string/config" />

</menu>
