<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.configuracion_cuenta.EditPasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <EditText
            android:id="@+id/etPasswordConfir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/hint_contrasena_actual"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etPasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_contrasena_nueva"
            android:inputType="textPassword"/>


        <EditText
            android:id="@+id/etPasswordNewConfir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_conf_contrasena_nueva"
            android:inputType="textPassword"/>



    </LinearLayout>


    <Button
        android:id="@+id/btnGuardarCambiosContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_cambios"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
       />


</androidx.coordinatorlayout.widget.CoordinatorLayout>