<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_titulo_reportar_accidente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_reportar_accidente"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/img_reportar_accidente"
        android:src="@drawable/nombre2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_titulo_reportar_accidente"/>
    <EditText
        android:id="@+id/edt_comentario_reportar_accidente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_comentario"
        android:textSize="22sp"
        android:layout_below="@id/img_reportar_accidente"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_comentario_reportar_accidente">
        <Button android:id="@+id/btn_aceptar_reportar_accidente"
            android:layout_height="wrap_content"
            android:text="@string/reportar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="10dp"/>
        <Button android:id="@+id/btn_cancelar_reportar_accidente"
            android:layout_height="wrap_content"
            android:text="@string/cal_cancelar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>