<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoName"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo_inicio" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textSecond">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="30dp"
            android:text="@string/recordar"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>