<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.informacion.AutorizacionFragment">

    <include layout="@layout/my_toolbar"/>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_margin="16sp">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:textSize="20sp"
               android:fontFamily="@font/roboto_light"
               android:text="@string/autorizaci_n_de_tratamiento_de_datos_personales_usuarios_inndex_company_s_a_s"/>
           <TextView
               android:id="@+id/bodyAutorizacion"
               android:layout_width="match_parent"
               android:fontFamily="@font/roboto_light"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/autorizacionTerminos"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@android:color/holo_blue_bright"
               android:fontFamily="@font/roboto_light"
               android:text="@string/t_rminos_y_condiciones_de_uso_de_plataforma_inndex"/>

           <TextView
               android:id="@+id/autorizacionPolitica"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:fontFamily="@font/roboto_light"
               android:textColor="@android:color/holo_blue_bright"
               android:text="@string/pol_tica_de_tratamiento_de_datos_pesonales_pol_tica_de_privacidad"/>

       </LinearLayout>
   </ScrollView>
</LinearLayout>