<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.estaciones.admin.MisEdsFragment">

    <include layout="@layout/my_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mis_eds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvMensajeAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/mensaje_admin"
        android:textAlignment="gravity"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvInndexEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/inndex_email"
        android:textAlignment="gravity"
        android:textColor="@color/azul_texto_enlace"
        android:textSize="24sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/enviar_correo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_separator_services" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/separator_or"
            android:textColor="@color/gray_separator_services"
            android:textSize="25sp" />

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@color/gray_separator_services" />

    </LinearLayout>

    <!-- Whatsapp -->
    <RelativeLayout
        android:id="@+id/lay_whatsapp_ayuda"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons_indicaciones"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_button_whatsapp"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_btn_whatsapp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/whatsapp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/img_btn_whatsapp"
            android:text="@string/escr_benos_al_whatsapp"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>