<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AyudaFragment">

    <include layout="@layout/my_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/texto_ayuda"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/inndex_email"
        android:textColor="@color/blue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/enviarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/enviar_correo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <include layout="@layout/separator_or" />

    <!-- Whatsapp -->
    <RelativeLayout
        android:id="@+id/lay_whatsapp_ayuda"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons_indicaciones"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_button_whatsapp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_btn_whatsapp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/whatsapp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/img_btn_whatsapp"
            android:text="@string/escr_benos_al_whatsapp"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>


</LinearLayout>